--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,10 +4,7 @@
     {
       "label": "copy-tracker",
       "type": "shell",
-      "command": "cp ../tracker/dist/data-hub.min.js ./public/data-hub.min.js",
-      "windows": {
-        "command": "cp ../tracker/dist/data-hub.min.js ./public/data-hub.min.js"
-      },
+      "command": "cp ../tracker/dist/esm/** ./src/data-hub",
       "presentation": {
         "reveal": "always",
         "panel": "shared",
