--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "baseUrl": "./src",
-    "paths": {
-      "data-hub": ["data-hub"]
-    }
+    "jsx": "react-jsx"
   },
   "include": ["src"]
 }
