--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "./src",
+    "paths": {
+      "tnet-clickstream-connector-local": ["tnet-clickstream-connector-local"]
+    }
   },
   "include": ["src"]
+  
 }
